@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eclipse.emf.parsley</groupId>
 	<artifactId>org.eclipse.emf.parsley.parent</artifactId>
-	<version>1.13.0-SNAPSHOT</version>
+	<version>1.14.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>EMF Parsley</name>
@@ -12,8 +12,8 @@
 	<url>http://www.eclipse.org/emf-parsley/</url>
 
 	<ciManagement>
-		<system>hudson</system>
-		<url>https://hudson.eclipse.org/hudson</url>
+		<system>JIRO</system>
+		<url>https://ci.eclipse.org/emf-parsley/</url>
 	</ciManagement>
 	<licenses>
 		<license>
@@ -24,16 +24,16 @@
 	</licenses>
 	<organization>
 		<name>Eclipse Foundation</name>
-		<url>http://www.eclipse.org/</url>
+		<url>https://www.eclipse.org/</url>
 	</organization>
 	<issueManagement>
-		<system>Bugzilla</system>
-		<url>https://bugs.eclipse.org/bugs/buglist.cgi?product=EMF.Parsley</url>
+		<system>GitHub</system>
+		<url>https://github.com/eclipse-emf-parsley/emf-parsley/issues</url>
 	</issueManagement>
 	<scm>
-		<connection>scm:git:http://git.eclipse.org/c/emf-parsley/org.eclipse.emf-parsley.git</connection>
-		<developerConnection>scm:git:ssh://git.eclipse.org/gitroot/emf-parsley/org.eclipse.emf-parsley.git</developerConnection>
-		<url>http://git.eclipse.org/c/emf-parsley/org.eclipse.emf-parsley.git</url>
+		<connection>scm:git:https://github.com/eclipse-emf-parsley/emf-parsley.git</connection>
+		<developerConnection>scm:git:https://github.com/eclipse-emf-parsley/emf-parsley.git</developerConnection>
+		<url>git@github.com:eclipse-emf-parsley/emf-parsley.git</url>
 	</scm>
 	<developers>
 		<developer>
@@ -80,7 +80,7 @@
 
 		<!-- tests and runtime args -->
 		<os-jvm-flags />
-		<memoryArgs>-Xms256M -Xmx4G -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
+		<memoryArgs>-XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
 		<uiTestsArgs>${memoryArgs} ${os-jvm-flags} -Dorg.eclipse.swt.browser.DefaultType=mozilla</uiTestsArgs>
 		<!-- 
 		The following is not needed anymore
@@ -536,32 +536,12 @@
 			<properties>
 				<skipTests>true</skipTests>
 				
-				<!-- for Hudson CI @Eclipse.org -->
+				<!-- for Jenkins CI @Eclipse.org -->
 				<!-- Disable this on your local machine -->
 				<cbi.jarsigner.skip>false</cbi.jarsigner.skip>
 			</properties>
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>target-platform-configuration</artifactId>
-						<configuration>
-							<includePackedArtifacts>true</includePackedArtifacts>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200a-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>pack200-normalize</id>
-								<goals>
-									<goal>normalize</goal>
-								</goals>
-								<phase>package</phase>
-							</execution>
-						</executions>
-					</plugin>
 					<plugin>
 						<groupId>org.eclipse.cbi.maven.plugins</groupId>
 						<artifactId>eclipse-jarsigner-plugin</artifactId>
@@ -570,19 +550,6 @@
 								<id>sign</id>
 								<goals>
 									<goal>sign</goal>
-								</goals>
-								<phase>package</phase>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200b-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>pack200-pack</id>
-								<goals>
-									<goal>pack</goal>
 								</goals>
 								<phase>package</phase>
 							</execution>
@@ -708,27 +675,17 @@
 					<artifactId>tycho-p2-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
-
-				<plugin>
-					<groupId>org.eclipse.tycho.extras</groupId>
-					<artifactId>tycho-pack200a-plugin</artifactId>
-					<version>${tycho-extras-version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho.extras</groupId>
-					<artifactId>tycho-pack200b-plugin</artifactId>
-					<version>${tycho-extras-version}</version>
-				</plugin>
 				<plugin>
 					<groupId>org.eclipse.cbi.maven.plugins</groupId>
 					<artifactId>eclipse-jarsigner-plugin</artifactId>
-					<version>1.1.3</version>
+					<version>1.3.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-packaging-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
+						<skipPomGeneration>true</skipPomGeneration>
 						<format>'v'yyyyMMdd'-'HHmm</format>
 						<sourceReferences>
 							<generate>true</generate>
